# products

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6902370a7f27_initial_migration.py
crud/: crud.py
db/: database.py
models/: models.py
