[tool.poetry]
name = "products"
version = "0.1.0"
description = ""
authors = ["natX-nattaphon <nattaphon.bun@codegym.consulting>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
databases = "^0.9.0"
psycopg2 = "^2.9.10"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
